# frc-elo

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/20170222194443_teams/: down.sql  up.sql
migrations/20170309194005_store_weeks/: down.sql  up.sql
src/: cli.yaml  elo.rs  glicko.rs  main.rs  models.rs  tba.rs
templates/: index.html
